fix: correct showing vertical scrollbar for page

--- a/src/app/core/templates/main-template/main-template.component.css
+++ b/src/app/core/templates/main-template/main-template.component.css
@@ -2,19 +2,11 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 main {
   background-color: #F8F9FA;
-  flex-grow: 1;
-  overflow: auto;
 }
 #content {
-  flex-grow: 1;
   max-width: 100%;
-}
-shared-breadcrumb {
-  flex-grow: 1;
-}
-.router-outlet-container {
-  flex-grow: 1;
 }
